# scion

pkg/proto/control_plane/: inter_service.pb.go  inter_service_grpc.pb.go
pkg/slayers/: extn.go  path_info.go  path_info_test.go
pkg/spio/: BUILD.bazel  spio_doc.go  spio_export_test.go  spio_mac.go  spio_mac_test.go  spio_timestamp.go  spio_timestamp_test.go
proto/control_plane/v1/: inter_service.proto
