load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "spio_doc.go",
        "spio_mac.go",
        "spio_timestamp.go",
    ],
    importpath = "github.com/Andre-23/scion/tree/master/pkg/spio",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/drkey:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/path:go_default_library",
        "//pkg/slayers/path/empty:go_default_library",
        "//pkg/slayers/path/epic:go_default_library",
        "//pkg/slayers/path/onehop:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "@com_github_dchest_cmac//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "spio_export_test.go",
        "spio_mac_test.go",
        "spio_timestamp_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/drkey:go_default_library",
        "//pkg/private/xtest:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/path:go_default_library",
        "//pkg/slayers/path/empty:go_default_library",
        "//pkg/slayers/path/epic:go_default_library",
        "//pkg/slayers/path/onehop:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//private/drkey/drkeyutil:go_default_library",
        "@com_github_dchest_cmac//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)